prepare to release

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <groupId>com.github.igor-suhorukov</groupId>
     <artifactId>vfs-url-handler</artifactId>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
 
     <description>Extend java.net.URL with commons-vfs2 protocol and supported transports</description>
     <scm>
